--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Codebook for State-Level Policies Affecting Agricultural Costs and Revenues in the US, 1975-2021: Data, Patterns, and Correlates
+title: Codebook for State-Level Policies Affecting Agricultural Costs and Revenues in the US
 author: Marc F. Bellemare, Galina Hale, Yanxu Long, and Siyu Luo
 logo: booklogo.png
 
