--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # or the branch you want to trigger the deployment
+      - gh-pages  # or the branch you want to trigger the deployment
 
 jobs:
   build-and-deploy:
