--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/yanxulong/ag_policies_codebook/_build/html  # Online location of your book  # Online location of your book
+  url: https://github.com/yanxulong/UCSC-UMN-AFRI-project # Online location of your book  # Online location of your book
   path_to_book: docs  # Optional path to your book, relative to the repository root
   branch: master  # Which branch of the repository should be used when creating links (optional)
 
@@ -42,3 +42,4 @@ launch_buttons:
 # jupyter-book build /Users/long/Library/CloudStorage/OneDrive-Personal/Projects/UCSC-UMN-AFRI-project/Codebook/
 # jupyter-book build /Users/long/Library/CloudStorage/OneDrive-Personal/Projects/UCSC-UMN-AFRI-project/Codebook/ --builder pdfhtml
 # jupyter-book build /Users/long/Library/CloudStorage/OneDrive-Personal/Projects/ag_policies_codebook
+# ghp-import -n -p -f _build/html
